--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "chart.js": "^3.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
