--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,21 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@mui/icons-material": "^5.3.0",
+    "@mui/material": "^5.3.0",
+    "@mui/styled-engine-sc": "^5.3.0",
+    "axios": "^0.25.0",
+    "cors": "^2.8.5",
     "chart.js": "^3.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "sweetalert2": "^11.3.10",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
