--- a/api/package.json
+++ b/api/package.json
@@ -11,14 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sequelize/core": "^7.0.0-alpha.10",
+    "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
-    "express": "^4.17.2",
-    "morgan": "~1.9.1",
     "debug": "~2.6.9",
+    "express": "^4.17.2",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "cookie-parser": "~1.4.4",
-    "pg": "^8.7.1"
+    "morgan": "~1.9.1",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.17.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
