--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.3",
     "sweetalert2": "^11.3.10",
